--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-awesome-slider": "^4.1.0",
     "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
@@ -23,7 +24,6 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.4",
-    "swiper": "^10.3.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
