--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,11 @@
 {
     "short_name": "NAMANGANTRANS",
     "name": "NAMANGANTRANS",
+    "description": "NAMANGANTRANS platform",
+    "start_url": ".",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#000000",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
