--- a/client/package.json
+++ b/client/package.json
@@ -1,54 +1,57 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "apexcharts": "^3.44.0",
-    "axios": "^1.5.1",
-    "i18next": "^23.4.6",
-    "i18next-browser-languagedetector": "^7.1.0",
-    "i18next-http-backend": "^2.2.2",
-    "moment": "^2.29.4",
-    "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-awesome-slider": "^4.1.0",
-    "react-datepicker": "^4.20.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.2.0",
-    "react-icons": "^4.11.0",
-    "react-qr-code": "^2.0.12",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
-    "react-to-print": "^2.14.15",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.69.4",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "apexcharts": "^3.44.0",
+        "axios": "^1.5.1",
+        "i18next": "^23.4.6",
+        "i18next-browser-languagedetector": "^7.1.0",
+        "i18next-http-backend": "^2.2.2",
+        "moment": "^2.29.4",
+        "prettier": "^3.4.2",
+        "react": "^18.2.0",
+        "react-apexcharts": "^1.4.1",
+        "react-awesome-slider": "^4.1.0",
+        "react-datepicker": "^4.20.0",
+        "react-dom": "^18.2.0",
+        "react-i18next": "^13.2.0",
+        "react-icons": "^4.11.0",
+        "react-qr-code": "^2.0.12",
+        "react-redux": "^8.1.3",
+        "react-router-dom": "^6.16.0",
+        "react-scripts": "5.0.1",
+        "react-to-print": "^2.14.15",
+        "redux": "^4.2.1",
+        "redux-persist": "^6.0.0",
+        "sass": "^1.69.4",
+        "uuid": "^9.0.1",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "prettier:write": "prettier --write .",
+        "prettier:check": "prettier --check ."
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
