--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@vercel/speed-insights": "^1.1.0",
         "apexcharts": "^3.44.0",
         "axios": "^1.5.1",
         "i18next": "^23.4.6",
