--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ant-design/icons": "^5.5.2",
         "@vercel/speed-insights": "^1.1.0",
+        "antd": "^5.23.0",
         "apexcharts": "^3.44.0",
         "axios": "^1.5.1",
         "i18next": "^23.4.6",
@@ -54,5 +56,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.4.17"
     }
 }
