--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^5.5.2",
+        "@reduxjs/toolkit": "^2.5.0",
         "@vercel/speed-insights": "^1.1.0",
         "antd": "^5.23.0",
         "apexcharts": "^3.44.0",
