--- a/client/package.json
+++ b/client/package.json
@@ -33,12 +33,12 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "prettier:write": "prettier --write .",
-        "prettier:check": "prettier --check ."
+        "start": "react-app-rewired start",
+        "build": "set \"GENERATE_SOURCEMAP=false\" && react-app-rewired build",
+        "test": "react-app-rewired test",
+        "eject": "react-app-rewired eject",
+        "format:write": "prettier --write .",
+        "formmat:check": "prettier --check ."
     },
     "eslintConfig": {
         "extends": [
@@ -59,6 +59,8 @@
         ]
     },
     "devDependencies": {
+        "react-app-rewire-alias": "^1.1.7",
+        "react-app-rewired": "^2.2.1",
         "tailwindcss": "^3.4.17"
     }
 }
