--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon index.js",
-        "prettier:write": "prettier --write .",
-        "prettier:check": "prettier --check ."
+        "format:write": "prettier --write .",
+        "format:check": "prettier --check ."
     },
     "author": "",
     "license": "ISC",
