--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,8 @@
         ]
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.5.1",
         "react-app-rewire-alias": "^1.1.7",
         "react-app-rewired": "^2.2.1",
         "tailwindcss": "^3.4.17"
