--- a/client/package.json
+++ b/client/package.json
@@ -28,15 +28,14 @@
         "react-to-print": "^2.14.15",
         "redux": "^4.2.1",
         "redux-persist": "^6.0.0",
-        "sass": "^1.69.4",
         "uuid": "^9.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-app-rewired start",
-        "build": "set \"GENERATE_SOURCEMAP=false\" && react-app-rewired build",
-        "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject",
+        "start": "craco start",
+        "build": "set \"GENERATE_SOURCEMAP=false\" && craco build",
+        "test": "craco test",
+        "eject": "craco eject",
         "format:write": "prettier --write .",
         "formmat:check": "prettier --check ."
     },
@@ -59,10 +58,22 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-private-methods": "^7.18.6",
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@craco/craco": "^7.1.0",
         "autoprefixer": "^10.4.20",
+        "css-loader": "^7.1.2",
+        "cssnano": "^7.0.6",
+        "customize-cra": "^1.0.0",
+        "mini-css-extract-plugin": "^2.9.2",
         "postcss": "^8.5.1",
+        "postcss-loader": "^8.1.1",
         "react-app-rewire-alias": "^1.1.7",
-        "react-app-rewired": "^2.2.1",
-        "tailwindcss": "^3.4.17"
+        "sass": "^1.83.4",
+        "sass-loader": "^16.0.4",
+        "style-loader": "^4.0.0",
+        "tailwindcss": "^3.4.17",
+        "webpack": "^5.97.1"
     }
 }
