--- a/client/package.json
+++ b/client/package.json
@@ -1,79 +1,54 @@
 {
-    "name": "client",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@ant-design/icons": "^5.5.2",
-        "@reduxjs/toolkit": "^2.5.0",
-        "@vercel/speed-insights": "^1.1.0",
-        "antd": "^5.23.0",
-        "apexcharts": "^3.44.0",
-        "axios": "^1.5.1",
-        "i18next": "^23.4.6",
-        "i18next-browser-languagedetector": "^7.1.0",
-        "i18next-http-backend": "^2.2.2",
-        "moment": "^2.29.4",
-        "prettier": "^3.4.2",
-        "react": "^18.2.0",
-        "react-apexcharts": "^1.4.1",
-        "react-awesome-slider": "^4.1.0",
-        "react-datepicker": "^4.20.0",
-        "react-dom": "^18.2.0",
-        "react-i18next": "^13.2.0",
-        "react-icons": "^4.11.0",
-        "react-qr-code": "^2.0.12",
-        "react-redux": "^8.1.3",
-        "react-router-dom": "^6.16.0",
-        "react-scripts": "5.0.1",
-        "react-to-print": "^2.14.15",
-        "redux": "^4.2.1",
-        "redux-persist": "^6.0.0",
-        "uuid": "^9.0.1",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "craco start",
-        "build": "set \"GENERATE_SOURCEMAP=false\" && craco build",
-        "test": "craco test",
-        "eject": "craco eject",
-        "format:write": "prettier --write .",
-        "formmat:check": "prettier --check ."
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-private-methods": "^7.18.6",
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@craco/craco": "^7.1.0",
-        "autoprefixer": "^9.8.8",
-        "css-loader": "^7.1.2",
-        "cssnano": "^7.0.6",
-        "customize-cra": "^1.0.0",
-        "mini-css-extract-plugin": "^2.9.2",
-        "postcss": "^8.5.1",
-        "postcss-loader": "^8.1.1",
-        "react-app-rewire-alias": "^1.1.7",
-        "sass": "^1.83.4",
-        "sass-loader": "^16.0.4",
-        "style-loader": "^4.0.0",
-        "tailwindcss": "^3.4.17",
-        "webpack": "^5.97.1"
-    }
+  "name": "client2",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^5.5.2",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
+    "@vercel/speed-insights": "^1.1.0",
+    "antd": "^5.23.0",
+    "axios": "^1.5.1",
+    "i18next": "^23.4.6",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
+    "moment": "^2.29.4",
+    "prettier": "^3.4.2",
+    "react": "^18.3.1",
+    "react-awesome-slider": "^4.1.0",
+    "react-datepicker": "^4.20.0",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^13.2.0",
+    "react-icons": "^4.11.0",
+    "react-qr-code": "^2.0.12",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^4.0.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "sass-embedded": "^1.83.4",
+    "vite": "^6.0.5"
+  }
 }
