--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -18,6 +18,6 @@
       "@routes/*": ["./src/routes/*"],
       "@helpers/*": ["./src/helpers/*"]
     },
-    "strict": true,
+    "strict": true
   }
 }
