--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,6 @@
     "react-to-print": "^2.14.15",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^4.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -45,12 +44,15 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "10.4.19",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "sass-embedded": "^1.83.4",
+    "postcss": "8.4.39",
+    "tailwindcss": "3.4.5",
     "vite": "^6.0.5"
   }
 }
