--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.15",
+    "react-webcam": "^7.2.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1"
@@ -50,8 +51,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "sass-embedded": "^1.83.4",
     "postcss": "8.4.39",
+    "sass-embedded": "^1.83.4",
     "tailwindcss": "3.4.5",
     "vite": "^6.0.5"
   }
