--- a/client/package.json
+++ b/client/package.json
@@ -34,8 +34,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.0.7",
     "react-to-print": "^2.14.15",
-    "react-webcam": "^7.2.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1"
